# w04/w04-team/cse341-code-student-L04-team-start/controllers/temple.js
@@ -4,7 +4,12 @@ const Temple = db.temples;
 const apiKey =
   'Ezl0961tEpx2UxTZ5v2uKFK91qdNAr5npRlMT1zLcE3Mg68Xwaj3N8Dyp1R8IvFenrVwHRllOUxF0Og00l0m9NcaYMtH6Bpgdv7N';
 
+// DELETE, PUT
+
 exports.create = (req, res) => {
+  /* 
+    #swagger.description = 'apiKey = Ezl0961tEpx2UxTZ5v2uKFK91qdNAr5npRlMT1zLcE3Mg68Xwaj3N8Dyp1R8IvFenrVwHRllOUxF0Og00l0m9NcaYMtH6Bpgdv7N'
+  */
   // Validate request
   if (!req.body.name) {
     res.status(400).send({ message: 'Content can not be empty!' });
@@ -82,80 +87,80 @@ exports.findOne = (req, res) => {
   }
 };
 
-// // Update a Temple by the id in the request
-// exports.update = (req, res) => {
-//   if (!req.body) {
-//     return res.status(400).send({
-//       message: 'Data to update can not be empty!',
-//     });
-//   }
+// Update a Temple by the id in the request
+exports.update = (req, res) => {
+  if (!req.body) {
+    return res.status(400).send({
+      message: 'Data to update can not be empty!',
+    });
+  }
 
-//   const id = req.params.id;
+  const id = req.params.temple_id;
 
-//   Temple.findByIdAndUpdate(id, req.body, { useFindAndModify: false })
-//     .then((data) => {
-//       if (!data) {
-//         res.status(404).send({
-//           message: `Cannot update Temple with id=${id}. Maybe Temple was not found!`,
-//         });
-//       } else res.send({ message: 'Temple was updated successfully.' });
-//     })
-//     .catch((err) => {
-//       res.status(500).send({
-//         message: 'Error updating Temple with id=' + id,
-//       });
-//     });
-// };
+  Temple.findByIdAndUpdate(id, req.body, { useFindAndModify: false })
+    .then((data) => {
+      if (!data) {
+        res.status(404).send({
+          message: `Cannot update Temple with id=${id}. Maybe Temple was not found!`,
+        });
+      } else res.send({ message: 'Temple was updated successfully.' });
+    })
+    .catch((err) => {
+      res.status(500).send({
+        message: 'Error updating Temple with id=' + id,
+      });
+    });
+};
 
-// // Delete a Temple with the specified id in the request
-// exports.delete = (req, res) => {
-//   const id = req.params.id;
+// Delete a Temple with the specified id in the request
+exports.delete = (req, res) => {
+  const id = req.params.id;
 
-//   Temple.findByIdAndRemove(id)
-//     .then((data) => {
-//       if (!data) {
-//         res.status(404).send({
-//           message: `Cannot delete Temple with id=${id}. Maybe Temple was not found!`,
-//         });
-//       } else {
-//         res.send({
-//           message: 'Temple was deleted successfully!',
-//         });
-//       }
-//     })
-//     .catch((err) => {
-//       res.status(500).send({
-//         message: 'Could not delete Temple with id=' + id,
-//       });
-//     });
-// };
+  Temple.findByIdAndRemove(id)
+    .then((data) => {
+      if (!data) {
+        res.status(404).send({
+          message: `Cannot delete Temple with id=${id}. Maybe Temple was not found!`,
+        });
+      } else {
+        res.send({
+          message: 'Temple was deleted successfully!',
+        });
+      }
+    })
+    .catch((err) => {
+      res.status(500).send({
+        message: 'Could not delete Temple with id=' + id,
+      });
+    });
+};
 
-// // Delete all Temples from the database.
-// exports.deleteAll = (req, res) => {
-//   Temple.deleteMany({})
-//     .then((data) => {
-//       res.send({
-//         message: `${data.deletedCount} Temples were deleted successfully!`,
-//       });
-//     })
-//     .catch((err) => {
-//       res.status(500).send({
-//         message:
-//           err.message || 'Some error occurred while removing all temple.',
-//       });
-//     });
-// };
+// Delete all Temples from the database.
+exports.deleteAll = (req, res) => {
+  Temple.deleteMany({})
+    .then((data) => {
+      res.send({
+        message: `${data.deletedCount} Temples were deleted successfully!`,
+      });
+    })
+    .catch((err) => {
+      res.status(500).send({
+        message:
+          err.message || 'Some error occurred while removing all temple.',
+      });
+    });
+};
 
-// // Find all published Temples
-// exports.findAllPublished = (req, res) => {
-//   Temple.find({ published: true })
-//     .then((data) => {
-//       res.send(data);
-//     })
-//     .catch((err) => {
-//       res.status(500).send({
-//         message:
-//           err.message || 'Some error occurred while retrieving temple.',
-//       });
-//     });
-// };
+// Find all published Temples
+exports.findAllPublished = (req, res) => {
+  Temple.find({ published: true })
+    .then((data) => {
+      res.send(data);
+    })
+    .catch((err) => {
+      res.status(500).send({
+        message:
+          err.message || 'Some error occurred while retrieving temple.',
+      });
+    });
+};
