# w04/w04-team/cse341-code-student-L04-team-start/routes/temple.js
@@ -1,9 +1,15 @@
 const routes = require('express').Router();
 const temples = require('../controllers/temple.js');
 
+// TEACHER
 routes.get('/', temples.findAll);
 routes.get('/:temple_id', temples.findOne);
 
 routes.post('/', temples.create);
+
+// ASSIGNMENT
+routes.put('/:temple_id', temples.update);
+
+routes.delete('/:temple_id', temples.delete);
 
 module.exports = routes;
